# libprocessing

./: .gitignore  Cargo.toml  justfile
.github/workflows/: ci.yml  release.yml
assets/shaders/: custom_material.wesl
crates/processing_core/: Cargo.toml
crates/processing_core/src/: config.rs  error.rs  lib.rs
crates/processing_ffi/src/: color.rs  lib.rs
crates/processing_glfw/: Cargo.toml
crates/processing_glfw/src/: lib.rs
crates/processing_input/: Cargo.toml
crates/processing_input/src/: lib.rs  state.rs
crates/processing_midi/src/: lib.rs
crates/processing_pyo3/: .gitignore  Cargo.toml  assets  pyproject.toml
crates/processing_pyo3/examples/: bench_particles.py  curves.py  custom_material.py  gltf_load.py  input.py  materials.py  midi.py  primitives_2d.py  primitives_3d.py  shapes.py
crates/processing_pyo3/mewnala/: __init__.py
crates/processing_pyo3/src/: color.rs  compute.rs  glfw.rs  gltf.rs  graphics.rs  input.rs  lib.rs  material.rs  math.rs  midi.rs  shader.rs  webcam.rs
crates/processing_render/: Cargo.toml  build.rs
crates/processing_render/shaders/: processing.wesl
crates/processing_render/src/: color.rs  compute.rs  error.rs  gltf.rs  graphics.rs  image.rs  lib.rs  midi.rs  shader_value.rs  sketch.rs  surface.rs  transform.rs
crates/processing_render/src/geometry/: attribute.rs  layout.rs  mod.rs
crates/processing_render/src/material/: custom.rs  mod.rs  pbr.rs
crates/processing_render/src/render/: command.rs  material.rs  mod.rs
crates/processing_render/src/render/primitive/: arc.rs  curves.rs  ellipse.rs  line.rs  mod.rs  quad.rs  rect.rs  shape.rs  shape3d.rs  triangle.rs
crates/processing_wasm/src/: lib.rs
crates/processing_webcam/: Cargo.toml
crates/processing_webcam/src/: lib.rs
examples/: animated_mesh.rs  background_image.rs  box.rs  compute_readback.rs  curves.rs  custom_attribute.rs  custom_material.rs  glfw.rs  gltf_load.rs  input.rs  lights.rs  materials.rs  midi.rs  pbr.rs  primitives_2d.rs  primitives_3d.rs  rectangle.rs  shapes.rs  stroke_2d.rs  stroke_3d.rs  transforms.rs  update_pixels.rs  webcam.rs
src/: lib.rs  prelude.rs
tools/generate_stubs/: Cargo.toml
tools/generate_stubs/src/: main.rs
