[package]
name = "processing"
version = "0.1.0"
edition = "2024"
autoexamples = false

[lints]
workspace = true

[features]
default = ["wayland"]
wayland = ["processing_render/wayland"]
x11 = ["processing_render/x11"]
webcam = ["dep:processing_webcam"]

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
processing = { path = "." }
processing_core = { path = "crates/processing_core" }
processing_pyo3 = { path = "crates/processing_pyo3" }
processing_render = { path = "crates/processing_render" }
processing_midi = { path = "crates/processing_midi" }
processing_webcam = { path = "crates/processing_webcam" }

[dependencies]
bevy = { workspace = true }
processing_core = { workspace = true }
processing_render = { workspace = true }
processing_midi = { workspace = true }
processing_webcam = { workspace = true, optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window"] }

[dev-dependencies]
glfw = "0.60.0"

[target.'cfg(target_os = "linux")'.dev-dependencies]
glfw = { version = "0.60.0", features = ["wayland"] }

[[example]]
name = "rectangle"
path = "examples/rectangle.rs"

[[example]]
name = "background_image"
path = "examples/background_image.rs"

[[example]]
name = "update_pixels"
path = "examples/update_pixels.rs"

[[example]]
name = "transforms"
path = "examples/transforms.rs"

[[example]]
name = "box"
path = "examples/box.rs"

[[example]]
name = "animated_mesh"
path = "examples/animated_mesh.rs"

[[example]]
name = "custom_attribute"
path = "examples/custom_attribute.rs"

[[example]]
name = "lights"
path = "examples/lights.rs"

[[example]]
name = "materials"
path = "examples/materials.rs"

[[example]]
name = "pbr"
path = "examples/pbr.rs"

[[example]]
name = "midi"
path = "examples/midi.rs"

[[example]]
name = "gltf_load"
path = "examples/gltf_load.rs"

[[example]]
name = "webcam"
path = "examples/webcam.rs"
required-features = ["webcam"]

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
