[package]
name = "processing_pyo3"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
name = "mewnala"
crate-type = ["cdylib"]

[features]
default = ["wayland"]
wayland = ["processing/wayland", "glfw/wayland"]
x11 = ["processing/x11"]
webcam = ["processing/webcam", "dep:processing_webcam"]

[dependencies]
pyo3 = { workspace = true, features = ["experimental-inspect"] }
processing = { workspace = true }
processing_webcam = { workspace = true, optional = true }
bevy = { workspace = true, features = ["file_watcher"] }
glfw = { version = "0.60.0", features = ["static-link"] }
png = "0.18"
