[package]
name = "processing_render"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = []
wayland = ["bevy/wayland"]
x11 = ["bevy/x11"]

[dependencies]
bevy = { workspace = true }
bevy_naga_reflect = { workspace = true }
naga = { workspace = true }
wesl = { workspace = true }
lyon = "1.0"
raw-window-handle = "0.6"
half = "2.7"
crossbeam-channel = "0.5"
processing_core = { workspace = true }

[build-dependencies]
wesl = { workspace = true, features = ["package"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", default-features = false }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
